--- a/assets/index.html
+++ b/assets/index.html
@@ -36,12 +36,27 @@
             </button>
           </div>
 <!-- cards part -->
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
+        
+<div class="container pt-4">
+    <div class="row">
+      <div class="col-lg">
+        <img src="img/placeholder.jpg" alt="an image" class="img-fluid mb-4 rounded"/>
+        </div> 
+            <div class="col-lg">
+                <h3 class="mb-4">News</h3>
+                <p>Hello my name is mohammad kassem</p>
+        </div>
+
+        <div class="container pt-4">
+            <div class="row">
+            <div class="col-lg">
+                <img src="img/placeholder.jpg" alt="an image" class="img-fluid mb-4 rounded"/>
+            </div> 
+            <div class="col-lg">
+                <h3 class="mb-4">News</h3>
+                <p>Glory Glory man united</p>
+        </div> 
+        
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     </body>
