--- a/assets/index.html
+++ b/assets/index.html
@@ -8,6 +8,25 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     </head>
     <body>
+        <!-- nav bar -->
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="/assets/images/21601.png" height="70"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">News</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         <!-- carousel part -->
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
@@ -38,26 +57,31 @@
 <!-- cards part -->
         
 <div class="container pt-4">
-    <div class="row">
+    <h1  class="text-center mb-5">News</h1>
+    <div class="row" id="content">
       <div class="col-lg">
-        <img src="img/placeholder.jpg" alt="an image" class="img-fluid mb-4 rounded"/>
+        <img src="..." alt="an image" class="img-fluid mb-4 rounded"/>
         </div> 
             <div class="col-lg">
-                <h3 class="mb-4">News</h3>
+                <img src="" alt="">
+                <h3 class="mb-4">News content</h3>
                 <p>Hello my name is mohammad kassem</p>
         </div>
 
         <div class="container pt-4">
             <div class="row">
             <div class="col-lg">
-                <img src="img/placeholder.jpg" alt="an image" class="img-fluid mb-4 rounded"/>
+                <img src="..."" alt="an image" class="img-fluid mb-4 rounded"/>
             </div> 
             <div class="col-lg">
-                <h3 class="mb-4">News</h3>
+                <img src="" alt="">
+                <h3 class="mb-4">News content</h3>
                 <p>Glory Glory man united</p>
         </div> 
         
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+        <script src="/index.js"></script>
     </body>
 </html>
