--- a/assets/index.html
+++ b/assets/index.html
@@ -56,28 +56,10 @@
           </div>
 <!-- cards part -->
         
-<div class="container pt-4">
+<div class="container pt-4" id="content">
     <h1  class="text-center mb-5">News</h1>
-    <div class="row" id="content">
-      <div class="col-lg">
-        <img src="..." alt="an image" class="img-fluid mb-4 rounded"/>
-        </div> 
-            <div class="col-lg">
-                <img src="" alt="">
-                <h3 class="mb-4">News content</h3>
-                <p>Hello my name is mohammad kassem</p>
-        </div>
 
-        <div class="container pt-4">
-            <div class="row">
-            <div class="col-lg">
-                <img src="..."" alt="an image" class="img-fluid mb-4 rounded"/>
-            </div> 
-            <div class="col-lg">
-                <img src="" alt="">
-                <h3 class="mb-4">News content</h3>
-                <p>Glory Glory man united</p>
-        </div> 
+</div>
         
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
